--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,4 +12,15 @@
     <% end%>
     </ul>
 <br>
+<%= button_to 'Like', like_post_path(@post), method: "POST" %>
+<%= form_for [@post, Comment.new] do |f| %>
+        <%= f.text_area :comment%> 
+        <br>
+        <%= f.submit 'Comment' %>
+        <%end%>
+<% if @current_user == @post.user %>
+        <%= link_to 'Edit Murmr', edit_post_path(@post) %>
+        <%= button_to "Delete Murmr", post_path(@post), :method => :delete %>
+<%end%>
+
 <%= link_to @post.user.username, @post.user %>
