--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,9 @@
                     <%= button_to 'Like', like_post_path(@post), method: "POST", class:"button is-primary is-small"%>
                         <%end%>    
                         <% if @current_user == @user %>
-                        <%= link_to 'Edit Murmr', edit_post_path(@post) %>
+                        <%= link_to 'Edit Murmr', edit_post_path(@post), class:"button is-primary is-small" %>
+                        <br>
+                        <br>
                         <%= button_to "Delete Murmr", post_path(@post), :method => :delete, class:"button is-primary is-small" %>
                         <%end%>
                 </div>
