--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,9 +39,12 @@
                     <p><%=post.likes.count%> likes </p>
                     <%= f.submit 'Comment', class:"button is-primary is-small"%>
                     <%= button_to 'Like', like_post_path(post), method: "POST", class:"button is-primary is-small"%>
+                    <br>
                         <%end%>    
                         <% if @current_user == @user %>
-                        <%= link_to 'Edit Murmr', edit_post_path(post) %>
+                        <%= link_to 'Edit Murmr', edit_post_path(post), class: "button is-primary is-small"%>
+                        <br>
+                        <br>
                         <%= button_to "Delete Murmr", post_path(post), :method => :delete, class:"button is-primary is-small" %>
                         <%end%>
                 </li>
